--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!--Logo-->
-        <a href="index.html"><img class="logoheader" src="./Img/LOGO.jpg" width="100" height="100"
+        <a href="index.html"><img class="logoheader" src="./Img/LOGO.jpg"
                 alt="Logo de la Empresa"></a>
         <h1 class="titulopagina">MERCADITO DE TECNOLOGIA</h1>
 
@@ -166,7 +166,7 @@
             </div>
 
             <div class="grid-item cuartoitem">
-                <a href="index.html"><img src="./Img/LOGO.jpg" width="100" height="100" alt="logo de la Empresa"></a>
+                <a href="index.html"><img class="logoheader" src="./Img/LOGO.jpg" alt="logo de la Empresa"></a>
             </div>
             <div class="grid-item quintoitem">
                 <p>Copyright © 2023 Mercadito de Tecnología-Todos los derechos reservados.</p>
