--- a/pages/Ayuda.html
+++ b/pages/Ayuda.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="../index.html"><img src="../Img/LOGO.jpg" width="100" height="100" alt="Logo de la Empresa"></a>
+        <a href="../index.html"><img class="logoheader" src="../Img/LOGO.jpg" alt="Logo de la Empresa"></a>
         <h1 class="titulopagina">AYUDA</h1>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -54,7 +54,7 @@
             <div>
                 <ul class="grid-puntito">
                     <li class="grid-puntito-a1"> <a href="#garantias">Garantías</a> </li>
-                    <li class="grid-puntito-a2"> <a href="#metodopago">pagos</a> </li>
+                    <li class="grid-puntito-a2"> <a href="#metodopago">Pagos</a> </li>
                     <li class="grid-puntito-a3"> <a href="#metodoentrega">Entregas</a> </li>
                 </ul>
             </div>
@@ -126,7 +126,7 @@
                 <h3>Twitter</h3>
             </div>
             <div class="grid-item cuartoitem">
-                <a href="../index.html"><img src="../Img/LOGO.jpg" width="100" height="100"
+                <a href="../index.html"><img class="logoheader" src="../Img/LOGO.jpg"
                         alt="logo de la Empresa"></a>
             </div>
             <div class="grid-item quintoitem">
