--- a/pages/Compra.html
+++ b/pages/Compra.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="../index.html"><img src="../Img/LOGO.jpg" width="100" height="100" alt="Logo de la Empresa"></a>
+        <a href="../index.html"><img class="logoheader" src="../Img/LOGO.jpg" alt="Logo de la Empresa"></a>
         <h1 class="titulopagina">Compras</h1>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -49,7 +49,7 @@
     <section class="datos grid-datos">
         <h4>Dirección de envío</h4>
         <div class="grid-datos-compra1">
-            <label for="correoelec">Correo Eléctronico:</label>
+            <label for="correoelec">Correo Electrónico:</label>
             <input type="email" name="correoelec" id="correoelec">
         </div>
 
@@ -178,7 +178,7 @@
                 <h3>Twitter</h3>
             </div>
             <div class="grid-item cuartoitem">
-                <a href="../index.html"><img src="../Img/LOGO.jpg" width="100" height="100"
+                <a href="../index.html"><img class="logoheader" src="../Img/LOGO.jpg"
                         alt="Logo de la Empresa"></a>
             </div>
             <div class="grid-item quintoitem">
