--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="../index.html"><img src="../Img/LOGO.jpg" width="100" height="100" alt="logo de la Empresa"></a>
+        <a href="../index.html"><img class="logoheader"src ="../Img/LOGO.jpg" alt="logo de la Empresa"></a>
         <h1 class="titulopagina">PRODUCTOS</h1>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -405,7 +405,7 @@
             </div>
 
             <div class="grid-item cuartoitem">
-                <a href="../index.html"><img src="../Img/LOGO.jpg" width="100" height="100"
+                <a href="../index.html"><img class="logoheader" src="../Img/LOGO.jpg"
                         alt="logo de la Empresa"></a>
             </div>
             <div class="grid-item quintoitem">
