--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <!--<link rel="stylesheet" href="./css/style.css">-->
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="icon" href="./Img/LOGO.jpg" type="/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -166,7 +167,7 @@
             </div>
 
             <div class="grid-item cuartoitem">
-                <a href="index.html"><img class="logoheader" src="./Img/LOGO.jpg" alt="logo de la Empresa"></a>
+                <a href="index.html"><img  src="./Img/LOGO.jpg" alt="logo de la Empresa"></a>
             </div>
             <div class="grid-item quintoitem">
                 <p>Copyright © 2023 Mercadito de Tecnología-Todos los derechos reservados.</p>
