--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <!--<link rel="stylesheet" href="../css/style.css">-->
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="icon" href="../Img/LOGO.jpg" type="/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -158,7 +159,7 @@
             <a href="../pages/Compra.html">
                 <img src="../Img/smart-noblex-43.jpg" alt="Smart TV Noblex 43'">
             </a>
-            <p>Televisor Smart TV marca Noblex, pantalla de 43 pulgadas</p>
+            <p>Televisor Smart TV marca Noblex de 43 pulgadas</p>
             <a class="productoboton" href="./Compra.html">COMPRAR</a>
 
         </div>
@@ -278,7 +279,7 @@
             <a href="../pages/Compra.html">
                 <img src="../Img/Notebook-apple.jpg" alt="Notebook Apple">
             </a>
-            <p>Notebook marca Apple con 8gb RAM y 512gb de almacenamiento</p>
+            <p>Notebook Apple con 8gb RAM y 512gb de almacenamiento</p>
             <a class="productoboton" href="./Compra.html">COMPRAR</a>
 
         </div>
@@ -298,7 +299,7 @@
             <a href="../pages/Compra.html">
                 <img src="../Img/Notebook-aorus.jpg" alt="Notebook Aorus">
             </a>
-            <p>Notebook marca Aorus con 16gb RAM y 1TB de almacenamiento</p>
+            <p>Notebook Aorus con 16gb RAM y 1TB de almacenamiento</p>
             <a class="productoboton" href="./Compra.html">COMPRAR</a>
 
         </div>
@@ -330,7 +331,7 @@
             <a href="../pages/Compra.html">
                 <img src="../Img/Monitor-Samsung-24.jpg" alt="Monitor Samsung">
             </a>
-            <p>Monitor marca Samsung con una pantalla de 24 pulgadas</p>
+            <p>Monitor Samsung con una pantalla de 24 pulgadas</p>
             <a class="productoboton" href="./Compra.html">COMPRAR</a>
 
         </div>
