--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link rel="icon" href="./Img/LOGO.jpg" type="/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        
+    <meta name="description" content="¡Explora el futuro de la tecnología en nuestro sitio! 
+    Descubre una amplia gama de monitores, celulares, y más. Encuentra los gadgets que transformarán tu vida.">
+    <meta name="keywords" content="mercadito, tecnología, tecnologia, tecno, electronica, samsung, celular, celu, iphone, smartphone, 
+    movil, tel, cel, telefono, teléfono, portatil, portátil, PC, netbook, ordenador, notebook, computadora, compu, laptop, pantalla, monitor, 
+    display, tele, televisión, television, televisor, smartv, smart, tv">
+
+    <meta property="pg:type" content="e-commerce">
+    <meta property="og:description" content="¡Explora el futuro de la tecnología en nuestro sitio! 
+    Descubre una amplia gama de monitores, celulares, y más. Encuentra los gadgets que transformarán tu vida.">
+    <meta property="og:title" content=" Mercadito de Tecnología">
+    <!--URL-IMG PARA SUBIR A UN SV-->
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+
     <title>Mercadito de Tecnología</title>
 </head>
 
@@ -104,7 +119,7 @@
                 <a href="./pages/Compra.html">
                     <img src="./Img/smart-noblex-43.jpg" alt="Smart TV Noblex 43'">
                 </a>
-                <p>Televisor Smart TV marca Noblex, pantalla de 43 pulgadas</p>
+                <p>Televisor Smart TV marca Noblex de 43 pulgadas</p>
                 <a class="productoboton" href="./pages/Compra.html">COMPRAR</a>
 
             </div>
