--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -9,7 +9,20 @@
     <link rel="icon" href="../Img/LOGO.jpg" type="/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Cuenta Mercadito</title>
+        
+    <meta name="description" content="Creá tu cuenta al instante, así podrás acceder a nuestros productos!">
+    <meta name="keywords" content="cuenta, mercadito, tecnologia, celular, celu, iphone, smartphone, movil, tel, cel, telefono, teléfono, 
+    portatil, portátil, PC, netbook, ordenador, notebook, computadora, compu, laptop, pantalla, monitor, display, 
+    tele, televisión, television, televisor, smartv, smart, tv">
+
+    <meta property="pg:type" content="e-commerce">
+    <meta property="og:description" content="Creá tu cuenta al instante, así podrás acceder a nuestros productos!">
+    <meta property="og:title" content=" Mercadito de Tecnología | Cuenta">
+    <!--URL-IMG PARA SUBIR A UN SV-->
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+
+    <title>Mercadito | Cuenta</title>
 </head>
 
 <body>
