--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <a href="./pages/productos.html#Notebooks">
-                            <img src="./Img/Novedades-imagen0.jpg" class="d-block w-100" alt="novedades-notebook">
+                            <img src="./Img/Banner3.jpg" class="d-block w-100" alt="novedades-notebook">
                         </a>
                     </div>
                     <div class="carousel-item img-caro">
-                        <a href="./pages/productos.html#Monitores">
-                            <img src="./Img/Novedades-imagen1.jpg" class="d-block w-100" alt="novedades-monitor">
+                        <a href="./pages/productos.html#Televisores">
+                            <img src="./Img/Banner1.jpg" class="d-block w-100" alt="novedades-tv">
                         </a>
                     </div>
                     <div class="carousel-item">
                         <a href="./pages/productos.html#Celulares">
-                            <img src="./Img/Novedades-imagen2.jpg" class="d-block w-100" alt="novedades-celular">
+                            <img src="./Img/Banner2.jpg" class="d-block w-100" alt="novedades-celular">
                         </a>
                     </div>
                 </div>
