--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     Descubre una amplia gama de monitores, celulares, y más. Encuentra los gadgets que transformarán tu vida.">
     <meta property="og:title" content=" Mercadito de Tecnología">
     <!--URL-IMG PARA SUBIR A UN SV-->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://mercaditodetecnologia.netlify.app/">
     <meta property="og:image" content="">
 
     <title>Mercadito de Tecnología</title>
