--- a/pages/Ayuda.html
+++ b/pages/Ayuda.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Necesitas ayuda con tus compras? Ingresa a la página para asesorarte!">
     <meta property="og:title" content=" Mercadito de Tecnología | Ayuda">
     <!--URL-IMG PARA SUBIR A UN SV-->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://mercaditodetecnologia.netlify.app/pages/ayuda">
     <meta property="og:image" content="">
 
     <title>Mercadito | Ayuda</title>
