--- a/pages/Compra.html
+++ b/pages/Compra.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="En esta página vas a poder pagar para llevarte lo que buscas!">
     <meta property="og:title" content=" Mercadito de Tecnología | Compra">
     <!--URL-IMG PARA SUBIR A UN SV-->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://mercaditodetecnologia.netlify.app/pages/compra">
     <meta property="og:image" content="">
 
     <title>Mercadito | Compra</title>
