--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Creá tu cuenta al instante, así podrás acceder a nuestros productos!">
     <meta property="og:title" content=" Mercadito de Tecnología | Cuenta">
     <!--URL-IMG PARA SUBIR A UN SV-->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://mercaditodetecnologia.netlify.app/pages/cuenta">
     <meta property="og:image" content="">
 
     <title>Mercadito | Cuenta</title>
