--- a/pages/productos.html
+++ b/pages/productos.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Compra al instante! Conocé las ofertas y promociones en nuestros productos!">
     <meta property="og:title" content=" Mercadito de Tecnología | Productos">
     <!--URL-IMG PARA SUBIR A UN SV-->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://mercaditodetecnologia.netlify.app/pages/productos">
     <meta property="og:image" content="">
     
     <title>Mercadito | Productos</title>
